force-app/main/default/objects/copado__Pull_Request__c/fields/copado__Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Approval_Status__c</fullName>
    <defaultValue>&apos;Pending&apos;</defaultValue>
    <inlineHelpText>Indicates the current approval status of the pull request. This information is retrieved directly from the connected Git provider and reflects whether the required reviewers have approved the pull request. Depending on the provider, data may be available via webhook or may require OAuth authorization.</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Request Changes</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>