force-app/main/default/objects/copado__Pull_Request__c/fields/copado__Assignees__c.field-meta.xml
<CustomField>
    <fullName>copado__Assignees__c</fullName>
    <label>Assignees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>