force-app/main/default/objects/copado__Pull_Request__c/fields/copado__Commits__c.field-meta.xml
<CustomField>
    <fullName>copado__Commits__c</fullName>
    <description>The number of commits in the pull request</description>
    <label>Commits</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>