force-app/main/default/objects/copado__Pull_Request__c/fields/copado__Merged_By__c.field-meta.xml
<CustomField>
    <fullName>copado__Merged_By__c</fullName>
    <description>The git hub username who merged the pull request</description>
    <label>Merged By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>