force-app/main/default/objects/copado__Pull_Request__c/fields/copado__Request_Number__c.field-meta.xml
<CustomField>
    <fullName>copado__Request_Number__c</fullName>
    <description>Pull Request Number</description>
    <label>Request Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>