force-app/main/default/objects/copado__Pull_Request__c/fields/copado__Requested_Reviewers__c.field-meta.xml
<CustomField>
    <fullName>copado__Requested_Reviewers__c</fullName>
    <label>Requested Reviewers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>