force-app/main/default/objects/copado__Pull_Request__c/fields/copado__Requested_Reviewers_Long__c.field-meta.xml
<CustomField>
    <fullName>copado__Requested_Reviewers_Long__c</fullName>
    <description>This field has been replaced by the copado__Requested_Reviewers_Long__c field.</description>
    <label>Requested Reviewers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>