force-app/main/default/objects/copado__Pull_Request__c/fields/copado__Required_Reviewer_Approvals__c.field-meta.xml
<CustomField>
    <fullName>copado__Required_Reviewer_Approvals__c</fullName>
    <inlineHelpText>Specifies the number of required reviewer approvals set in your Git provider. Helps determine if a pull request meets the configured approval threshold. Depending on the provider, data may be available via webhook or may require OAuth authorization.</inlineHelpText>
    <label>Required Reviewer Approvals</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>