force-app/main/default/objects/copado__Pull_Request__c/fields/copado__Target_Branch__c.field-meta.xml
<CustomField>
    <fullName>copado__Target_Branch__c</fullName>
    <description>The target branch of the pull request</description>
    <label>Target Branch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>