force-app/main/default/objects/copado__Pull_Request__c/fields/copado__User_Avatar__c.field-meta.xml
<CustomField>
    <fullName>copado__User_Avatar__c</fullName>
    <formula>IMAGE(copado__User_Avatar_Url__c, copado__Username__c, 50, 50)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Avatar</label>
    <type>Text</type>
</CustomField>